--- a/Lichtlabor.uproject
+++ b/Lichtlabor.uproject
@@ -3,6 +3,12 @@
 	"EngineAssociation": "4.19",
 	"Category": "",
 	"Description": "",
+	"Plugins": [
+		{
+			"Name": "GoogleVRHMD",
+			"Enabled": true
+		}
+	],
 	"TargetPlatforms": [
 		"PS4",
 		"WindowsNoEditor"
